[package]
name = "cch23-matz"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
base64 = "0.21.5"
image = "0.24.7"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
tempfile = "3.8.1"
actix-multipart = "0.6.1"
fancy-regex = "0.12.0"
ulid = {  version = "1.1.0", features = ["serde", "uuid"] }
uuid = "1.6.1"
chrono = "0.4.31"
