[package]
name = "cch23-matz"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.3.1"
base64 = "0.21.5"
chrono = "0.4.31"
fancy-regex = "0.12.0"
image = "0.24.7"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-actix-web = "0.35.1"
shuttle-runtime = { version = "0.35.1", default-features = false }
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tempfile = "3.8.1"
tokio = "1.26.0"
ulid = {  version = "1.1.0", features = ["serde", "uuid"] }
uuid = "1.6.1"
