[package]
name = "cch23-matz"
version = "0.20.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-rt = "2.9.0"
actix-web = "4.3.1"
actix-ws = "0.2.5"
async-tempfile = "0.5.0"
base64 = "0.21.5"
chrono = "0.4.31"
dotenv = "0.15.0"
emojis = "0.6.1"
fancy-regex = "0.12.0"
futures = "0.3.29"
git2 = "0.18.1"
google_maps = "3.4.0"
image = "0.24.7"
reqwest = "0.11.22"
s2 = "0.0.12"
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-actix-web = "0.35.1"
shuttle-runtime = { version = "0.35.1", default-features = false }
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tar = "0.4.40"
tempfile = "3.8.1"
tokio = "1.26.0"
ulid = {  version = "1.1.0", features = ["serde", "uuid"] }
unicode-segmentation = "1.10.1"
uuid = "1.6.1"
